--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-responsive-carousel": "^3.1.33",
     "react-responsive-modal": "^3.0.3",
     "react-router-dom": "^4.2.2",
+    "react-share": "^2.2.0",
     "react-skylight": "^0.5.0",
     "react-slideshow-image": "^0.1.3",
     "react-spinners": "^0.3.1",
